# bree

./: .pre-commit-config.yaml  Pipfile  README.md  image.py  pyproject.toml
.github/workflows/: quality.yaml
bree/: image.py  location.py  ocr.py
pin_the_tail/: image.py  interaction.py  location.py  ocr.py
tests/: run_without_display.py  test_image.py  test_interaction.py  test_location.py  test_ocr.py
tests/resources/: wiki-python-text.txt
