[tool.poetry]
name = "pin-the-tail"
version = "0.1.0"
description = "Object-oriented keyboard, mouse, and screen control"
authors = ["Michael Lipschultz <michael.lipschultz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.53"
opencv-python = "^4.7.0"
Pillow = "^9.0.1"
numpy = "^1.22.3"
matplotlib = "^3.6.2"
pytesseract = "^0.3.9"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
pre-commit = "^2.17.0"
mypy = "^0.942"
pytest-cov = "^4.0.0"
PyVirtualDisplay = "^3.0"
EasyProcess = "^1.1"
hypothesis = "^6.68.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = ["import-error", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.basic]
good-names = ["fp", "i", "x", "y"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.ruff]
line-length = 120
